# fashion_mnist_hw13

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
logres/: classifier.h  helpers.cpp  helpers.h  logreg_classifier.cpp  logreg_classifier.h
tensorflow-2.16.1/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/: CMakeLists.txt  STC_README.txt
tensorflow-2.16.1/CUSTOM_SRCS/abseil-cpp/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/cpuinfo/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/ducc/python/demos/: demo_oofnoise.py
tensorflow-2.16.1/CUSTOM_SRCS/eigen3/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/eigen3/Eigen/src/ThreadPool/: EventCount.h
tensorflow-2.16.1/CUSTOM_SRCS/farmhash/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/fft2d/OouraFFT-1.0/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/flatbuffers/flatbuffers-23.5.26/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/flatbuffers/flatbuffers-23.5.26/include/flatbuffers/: util.h
tensorflow-2.16.1/CUSTOM_SRCS/flatbuffers/flatbuffers-23.5.26/src/: util.cpp
tensorflow-2.16.1/CUSTOM_SRCS/fp16/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/fxdiv/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/gemmlowp/contrib/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/google_benchmark/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/ml_dtypes/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/nsync/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/nsync/platform/c++11/: platform.h
tensorflow-2.16.1/CUSTOM_SRCS/pthreadpool/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/re2/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/ruy/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/ruy/cmake/: ruy_cc_library.cmake
tensorflow-2.16.1/CUSTOM_SRCS/xnnpack/: CMakeLists.txt
tensorflow-2.16.1/CUSTOM_SRCS/zlib/: .gitignore  CMakeLists.txt
tensorflow-2.16.1/tensorflow/cc/ops/: standard_ops.h
tensorflow-2.16.1/tensorflow/core/: CMakeLists.txt
tensorflow-2.16.1/tensorflow/core/common_runtime/eager/: context.h  context_distributed_manager.cc
tensorflow-2.16.1/tensorflow/core/data/: tfdataz_metrics.cc
tensorflow-2.16.1/tensorflow/core/framework/: attr_value.pb_text.cc  optimized_function_graph.proto  resource_handle.pb_text.cc  tensor.cc  tensor.pb_text.cc  tensor_shape.pb_text.cc  types.pb_text.cc
tensorflow-2.16.1/tensorflow/core/framework/registration/: options.h
tensorflow-2.16.1/tensorflow/core/graph/: graph_debug_info_builder.cc
tensorflow-2.16.1/tensorflow/core/grappler/optimizers/data/: fusion_utils.cc
tensorflow-2.16.1/tensorflow/core/grappler/optimizers/inference/: batch_op_rewriter.cc  batch_op_rewriter.proto
tensorflow-2.16.1/tensorflow/core/kernels/: list_kernels.h  sparse_tensor_dense_matmul_op.cc
tensorflow-2.16.1/tensorflow/core/kernels/batching_util/: batch_resource_base.cc
tensorflow-2.16.1/tensorflow/core/platform/: types.h
tensorflow-2.16.1/tensorflow/lite/: CMakeLists.txt
tensorflow-2.16.1/tensorflow/lite/delegates/flex/: CMakeLists.txt  kernel.cc
tensorflow-2.16.1/tensorflow/lite/examples/minimal/: CMakeLists.txt
tensorflow-2.16.1/tensorflow/lite/kernels/variants/: CMakeLists.txt
tensorflow-2.16.1/tensorflow/lite/tools/cmake/modules/: OverridableFetchContent.cmake  fft2d.cmake  flatbuffers.cmake
tensorflow-2.16.1/tensorflow/lite/tools/cmake/modules/fft2d/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
tensorflow-2.16.1/tensorflow/lite/tools/cmake/modules/ml_dtypes/: CMakeCache.txt  cmake_install.cmake
tensorflow-2.16.1/tensorflow/tools/proto_text/: CMakeLists.txt
